[package]
name = "parking_lot"
version = "0.9.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "More compact and efficient implementations of the standard synchronization primitives."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
readme = "README.md"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
edition = "2018"

[dependencies]
parking_lot_core = { path = "core", version = "0.6" }
lock_api = { path = "lock_api", version = "0.3.1" }

[dev-dependencies]
rand = "0.7"
lazy_static = "1.0"

# Used when testing out serde support.
bincode = {version = "1.1.3"}

[build-dependencies]
rustc_version = "0.2"

[features]
default = []
owning_ref = ["lock_api/owning_ref"]
nightly = ["parking_lot_core/nightly", "lock_api/nightly"]
deadlock_detection = ["parking_lot_core/deadlock_detection"]
serde = ["lock_api/serde"]

[workspace]
exclude = ["benchmark"]
