[package]
name = "parking_lot"
version = "0.11.2"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "More compact and efficient implementations of the standard synchronization primitives."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
readme = "README.md"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
edition = "2018"

[dependencies]
parking_lot_core = { path = "core", version = "0.8.4" }
lock_api = { path = "lock_api", version = "0.4.5" }
instant = "0.1.9"

[dev-dependencies]
rand = "0.8.3"

# Used when testing out serde support.
bincode = "1.3.3"

[features]
default = []
arc_lock = ["lock_api/arc_lock"]
owning_ref = ["lock_api/owning_ref"]
nightly = ["parking_lot_core/nightly", "lock_api/nightly"]
deadlock_detection = ["parking_lot_core/deadlock_detection"]
serde = ["lock_api/serde"]
stdweb = ["instant/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen"]
send_guard = []

[workspace]
exclude = ["benchmark"]
