[package]
name = "parking_lot-benchmark"
version = "0.0.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
edition = "2021"

[dependencies]
parking_lot = {path = ".."}
seqlock = "0.2"
libc = "0.2"

[features]
nightly = ["parking_lot/nightly"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }
