[package]
name = "parking_lot_core"
version = "0.6.2"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "An advanced API for creating custom synchronization primitives."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
edition = "2018"

[dependencies]
cfg-if = "0.1.5"
smallvec = "0.6"
petgraph = { version = "0.4.5", optional = true }
thread-id = { version = "3.2.0", optional = true }
backtrace = { version = "0.3.2", optional = true }

[build-dependencies]
rustc_version = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.55"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[target.'cfg(target_os = "cloudabi")'.dependencies]
cloudabi = "0.0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "ntstatus", "minwindef",
    "winerror", "winbase", "errhandlingapi", "handleapi"] }

[features]
nightly = []
deadlock_detection = ["petgraph", "thread-id", "backtrace"]
