[package]
name = "parking_lot_core"
version = "0.9.7"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "An advanced API for creating custom synchronization primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
smallvec = "1.6.1"
petgraph = { version = "0.6.0", optional = true }
backtrace = { version = "0.3.60", optional = true }

[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dependencies]
thread-id = { version = "4.0.0", optional = true }

[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
js-sys = { version = "0.3.50", optional = true }
web-sys = { version = "0.3.50", optional = true, features = ["console"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.95"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.3"

[target.'cfg(windows)'.dependencies]
windows-targets = "0.48.0"

[features]
nightly = []
deadlock_detection = ["petgraph", "thread-id", "web-sys", "js-sys", "backtrace"]
