[package]
name = "lock_api"
version = "0.1.5"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Wrappers to create fully-featured Mutex and RwLock types. Compatible with no_std."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "rwlock", "lock", "no_std"]
categories = ["concurrency", "no-std"]

[dependencies]
scopeguard = { version = "0.3", default-features = false }
owning_ref = { version = "0.4", optional = true }

[features]
nightly = []
