[package]
name = "lock_api"
version = "0.3.1"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Wrappers to create fully-featured Mutex and RwLock types. Compatible with no_std."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "rwlock", "lock", "no_std"]
categories = ["concurrency", "no-std"]
edition = "2018"

[dependencies]
scopeguard = { version = "1.0", default-features = false }
owning_ref = { version = "0.4", optional = true }

# Optional dependency for supporting serde.  Optional crates automatically
# create a feature with the same name as the crate, so if you need serde
# support, just pass "--features serde" when building this crate.
serde = {version = "1.0.90", default-features = false, optional = true}

[features]
nightly = []
